packages/typ/tests/fixtures/diagnostics/0876_gadt_equality_cast_mismatch_02.ml.expected
File "0876_gadt_equality_cast_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0876_gadt_equality_cast_mismatch_02 is not a valid module name.

File "0876_gadt_equality_cast_mismatch_02.ml", line 7, characters 19-23:
7 |     | Refl_beta -> true
                       ^^^^
Error: The constructor true has type bool
       but an expression was expected of type b = a
